# zegar

./: .gitignore  CMakeLists.txt  alarmy.cpp  alarmy.h  alarmy.ui  how_to_make_translation.txt  jak_robic_wskazowki.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polish.qm  polski2.qm  polski2.ts  tedytor_alarmow_dlg.cpp  tedytor_alarmow_dlg.h  tedytor_alarmow_dlg.ui  tjeden_alarm.cpp  tjeden_alarm.h  togloszenie_alarmu.cpp  togloszenie_alarmu.h  togloszenie_alarmu.ui  topcje_dlg.cpp  topcje_dlg.h  topcje_dlg.ui  tpreferred_hands.cpp  tpreferred_hands.h  translations.qrc  ui_alarmy.h  ui_mainwindow.h  ui_tedytor_alarmow_dlg.h  ui_togloszenie_alarmu.h  ui_topcje_dlg.h  zegar.pro  zegar_elementy.qrc
